Quick fix to card keyword spacing

--- a/backend/css/default.css
+++ b/backend/css/default.css
@@ -66,7 +66,7 @@ td {
 
 .warband-nav, .nemesis-deck-nav {
     display: flex;
-    flex-wrap: no-wrap;
+    flex-wrap: nowrap;
     column-gap: 0.5rem;
     justify-content: space-evenly;
     padding-top: 2rem;
